--- a/Web_Bootstrap/WebContent/menu.html
+++ b/Web_Bootstrap/WebContent/menu.html
@@ -24,6 +24,7 @@
 				<li class="nav-item active"><a class="nav-link"
 					href="inicio.html">Inicio</a></li>
 				<li class="nav-item"><a class="nav-link" href="#articulos">Artículos</a></li>
+				<li class="nav-item"><a class="nav-link" href="#tablas">Tablas</a></li>
 			</ul>
 			<form action="" class="form-inline my-2 my-lg-0">
 				<div class="form-group">
@@ -44,12 +45,72 @@
 			</p>
 		</div>
 	</div>
-	
+
 	<div class="container">
 		<ol class="breadcrumb">
 			<li class="breadcrumb-item"><a href="inicio.html">Inicio</a></li>
 			<li class="breadcrumb-item active">Menú</li>
 		</ol>
+
+		<section id="articulos">
+			<div class="row">
+				<div class="mx-auto">
+					<h2>Artículos</h2>
+				</div>
+				<ul class="list-unstyled">
+					<li class="media"><img alt="Imagen del artículo"
+						src="images/androidsmiling.png" class="d-flex img-thumbnail mr-3">
+						<div class="media-body">
+							<h5 class="mt-0 mb-1">Artículo 1</h5>
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1. Texto del Artículo 1. Texto del Artículo 1.
+							Texto del Artículo 1.
+						</div></li>
+				</ul>
+			</div>
+		</section>
+		<section id="tablas">
+			<div class="row">
+				<div class="mx-auto">
+					<h2>Tablas</h2>
+				</div>
+				<table class="table table-responsive table-striped table-bordered table-hover table-sm">
+					<thead class="thead-default">
+						<tr>
+							<th>Nº</th>
+							<th>Nombre</th>
+							<th>Apellidos</th>
+							<th>Login</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="table-primary">
+							<td>1</td>
+							<td>Yo</td>
+							<td>YOYO</td>
+							<td>yo@yo.es</td>
+						</tr>
+						<tr class="table-danger">
+							<td>2</td>
+							<td>Tu</td>
+							<td>TUTU</td>
+							<td>tu@tu.es</td>
+						</tr>
+						<tr class="bg-warning">
+							<td>3</td>
+							<td>El</td>
+							<td>ELEL</td>
+							<td>el@el.es</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</section>
 	</div>
 
 	<script src="js/jquery-3.2.1.slim.min.js"></script>
