--- a/Web_Bootstrap/WebContent/menu.html
+++ b/Web_Bootstrap/WebContent/menu.html
@@ -25,6 +25,7 @@
 					href="inicio.html">Inicio</a></li>
 				<li class="nav-item"><a class="nav-link" href="#articulos">Artículos</a></li>
 				<li class="nav-item"><a class="nav-link" href="#tablas">Tablas</a></li>
+				<li class="nav-item"><a class="nav-link" href="#componentes">Componentes</a></li>
 			</ul>
 			<form action="" class="form-inline my-2 my-lg-0">
 				<div class="form-group">
@@ -140,6 +141,65 @@
 						</tr>
 					</tbody>
 				</table>
+			</div>
+		</section>
+		<section id="componentes">
+			<div class="row">
+				<div class="mx-auto">
+					<h2>Componentes</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="alert alert-warning alert-dismissible fade show"
+					role="alert">
+					<button type="button" class="close" data-dismiss="alert"
+						aria-label="close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					Error en el campo nombre. Consulte el siguiente <a href="#"
+						class="alert-link badge badge-warning">enlace</a>
+				</div>
+			</div>
+			<div class="row">
+				<div>
+					<button type="button" class="btn btn-sucess btn-lg">Success</button>
+					<button type="button" class="btn btn-info btn-sm">Info</button>
+					<button type="button" class="btn btn-dark btn-md">Dark</button>
+					<button type="button" class="btn btn-outline-dark">Dark</button>
+				</div>
+				<div class="btn-group btn-group-lg" role="group">
+					<button type="button" class="btn btn-secondary btn-lg">Izquierda</button>
+					<button type="button" class="btn btn-secondary btn-lg">Centro</button>
+					<button type="button" class="btn btn-secondary btn-lg">Derecha</button>
+				</div>
+			</div>
+			<div class="row">
+				<div>
+					<a class="btn btn-primary" data-toggle="collapse"
+						href="#ejemplocollapse">Enlace</a>
+					<button type="button" class="btn btn-primary"
+						data-toggle="collapse" data-target="#ejemplocollapse">Botón</button>
+
+					<div class="collapse" id="ejemplocollapse">
+						<div class="card card-body">Esto es lo que aparece al
+							pulsar. Esto es lo que aparece al pulsar. Esto es lo que aparece
+							al pulsar. Esto es lo que aparece al pulsar. Esto es lo que
+							aparece al pulsar.</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="list-group">
+					<a href="#" class="list-group-item active">Ir a Home</a> <a
+						href="#"
+						class="list-group-item list-group-item-action list-group-item-secondary">Ir
+						a Otros</a> <a href="#" class="list-group-item list-group-item-action">Ir
+						a Web</a> <a href="#"
+						class="list-group-item list-group-item-action disabled">Ir a
+						App</a> <a href="#"
+						class="list-group-item"><span
+						class="badge badge-primary">1050</span> Usuarios</a>
+				</div>
 			</div>
 		</section>
 	</div>
