--- a/EjerciciosJS/WebContent/index.html
+++ b/EjerciciosJS/WebContent/index.html
@@ -87,5 +87,11 @@
 			onclick="adivinarNumero(document.getElementById('numero').value)"><span
 			id="mensajeAdivinar"></span>
 	</div>
+
+	<p>Escribe un programa que nos vaya pidiendo números. Si escribimos
+		el número 9999 se acaba; por último el programa nos da como resultado
+		el número de números introducidos, exceptuando el 9999. Además nos dé
+		la suma de todos los números introducidos, exceptuando el 9999. Además
+		nos dé el producto de los números introducidos, exceptuando el 9999</p>
 </body>
 </html>
